removed preloader, fixed application message on small devices

--- a/WDP/css/style.sass
+++ b/WDP/css/style.sass
@@ -395,6 +395,7 @@ a
                 margin: auto
 
 .formsendedmsg
+    width: 420px
     background-color: #fff
     border: 2px solid $black
     border-radius: 20px
@@ -405,6 +406,7 @@ a
     z-index: 50
     transform: translate(-50%,0)
     padding: 20px 30px
+    text-align: center
     &-text
         span
             margin: 0px 7px
@@ -469,9 +471,11 @@ a
     .latest-works .buttons .buttons-group
         display: block
     .navline .navline-ul li
-        margin-left: 50px
+        margin-left: 0px
 
 @media screen and (max-width: 576px)
+    .formsendedmsg
+        width: 170px
     .servicing-modal-body
         padding: 30px 15px 30px 15px
     .prev-arrow 
